# Blob3D

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Doxyfile  LIBRARY_BUILD.md  README.md  format.sh  license.md
clang-tools/: format.sh
cmake/: BLOB3DConfig.cmake.in  blob3D.pc.in
configs/MM/: CMakeLists.txt
configs/hercules/: README.md  run.sh
configs/istorage/: run.sh
configs/marenostrum/: CMakeLists.txt  README.md  run.sh
configs/polaris/: README.md
doc/: .gitignore  blob-methodology.bib  blob-methodology.tex
examples/sphere/: CMakeLists.txt  main.cpp  run.sh  sphere.cpp  sphere.hpp
examples/sphere/inputs/: Sphere-R-20.dump
src/: CMakeLists.txt  Macros.hpp  Simulation.cpp  Simulation.hpp  Variables.cpp  Variables.hpp
src/Blobs/: Blob-Function.cpp  Blob-Function.hpp  Blobs.cpp  Blobs.hpp  Ghosts.cpp  Ghosts.hpp  Neighbors.cpp  Neighbors.hpp  Topology.cpp  Topology.hpp
src/Blobs/IO/: dump-inputs.cpp  dump-inputs.hpp  vtk-outputs.cpp  vtk-outputs.hpp
src/Boundaries/: sphere.cpp  sphere.hpp
src/Mesh/: Boundary-Conditions.cpp  Boundary-Conditions.hpp  Coordinates.cpp  Coordinates.hpp  Create-Mesh.cpp  Create-Mesh.hpp  Element-H8.cpp  Element-H8.hpp  InOut-Mesh.cpp  InOut-Mesh.hpp
src/Potentials/: Advection-Diff-OpenMP.cpp  Advection-Diff-OpenMP.hpp
src/Potentials/doc/: Lib-Notation.sty  doc-MgHx-V.tex  doc-MgHx-energy-barrier.tex
src/Solvers/: Mass-Transport-JKO-TAO.cpp  Mass-Transport-JKO-TAO.hpp
src/Solvers/doc/: Chemical-Algorithms.tex  mass-transport.tex
